test/core/errors/constants_error/zs/wrong_float_constant_error.zs
package wrong_float_constant_error;

const float32 WRONG_FLOAT_CONSTANT = "wrong";
